# spot-hackathon-kings

./: .gitignore  README.md
hackathon/: config.py
hackathon/hackathon_template/: aws_elastigroup_input.py  config.yml  pyproject.toml  threads.json
hackathon/hackathon_template/hackathon_template/: main.py
hackathon/hackathon_template/resources/: elastigroupVm.yaml
hackathon/hackathon_template/skills/: convert_group.py  create_azure_elastigroup.py  create_azure_elastigroup_in_account.py  elastigroup_converter.py  get_create_group_yml.py  get_designated_account_details.py  get_group_details.py
