[tool.poetry]
name = "hackathon-template"
version = "0.1.0"
description = ""
authors = ["Yam Marcovitz <yam@emcie.co>"]
readme = "README.md"
packages = [{include = "config"}]


[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.27.1"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
fastapi = "^0.109.2"
emcie-server = {path = "../emcie_server-0.1.0-py3-none-any.whl"}
config = "^0.5.1"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
